--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": false,
   "tailwind": {
     "config": "",
-    "css": "src/App.css",
+    "css": "src/index.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
@@ -19,3 +19,4 @@
   },
   "iconLibrary": "lucide"
 }
+
